Fix priority sort function to be more readable and ignore downtime for now

--- a/src/app/tasks-manager/tasks-manager.component.css
+++ b/src/app/tasks-manager/tasks-manager.component.css
@@ -49,6 +49,8 @@ td div {
 
 .steps-column {
 	max-width: 16em;
+	overflow-x: scroll;
+	scrollbar-width: none;
 }
 
 .steps-preview-container p {
